--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
       - deploy:
           command: |
             if [ "${CIRCLE_BRANCH}" == "master" ]; then
-              docker login -u $DOCKER_USER -p $DOCKER_PASS
+              docker login -u $DOCKER_USER -p "$DOCKER_PASS" https://us.gcr.io
               docker push us.gcr.io/kubernetes-dev/worldping-blackbox-sidecar:latest
             fi
 
