Add publishing, creating a blank repo, and pkg install test.

--- a/scripts/package/config/systemd/worldping-blackbox-sidecar.service
+++ b/scripts/package/config/systemd/worldping-blackbox-sidecar.service
@@ -1,12 +1,14 @@
 [Unit]
 Description=Grafana worldPing Blackbox Exporter Sidecar Service
- 
+
 [Service]
 Type=simple
 User=root
 Group=root
-ExecStart=/usr/bin/worldping-blackbox-sidecar "-config=???"
+EnvironmentFile=/etc/worldping.conf
+ExecStart=/usr/bin/worldping-blackbox-sidecar --api-token $API_TOKEN --api-server-address=worldping-grpc-dev.grafana.net:443 --blackbox-exporter-config /etc/prometheus/blackbox.yml
 Restart=always
+Requires=prometheus-blackbox-exporter.service
 
 [Install]
 WantedBy=network-online.target
