--- a/scripts/package/config/systemd/worldping.conf
+++ b/scripts/package/config/systemd/worldping.conf
@@ -1,2 +1,5 @@
 # Enter API token retrieved from grafana.com here
 API_TOKEN='YOUR TOKEN HERE'
+
+# Backend API server to connect to
+API_SERVER='worldping-grpc-dev.grafana.net:443' 
