--- a/scripts/package/config/systemd/worldping.conf
+++ b/scripts/package/config/systemd/worldping.conf
@@ -2,4 +2,4 @@
 API_TOKEN='YOUR TOKEN HERE'
 
 # Backend API server to connect to
-API_SERVER='worldping-grpc-dev.grafana.net:443' 
+API_SERVER='worldping-grpc.grafana.net:443' 
