--- a/Dockerfile.pub
+++ b/Dockerfile.pub
@@ -36,9 +36,6 @@ RUN mkdir -p /usr/local/gcloud && \
 # Add gcloud to the path
 ENV PATH $PATH:/usr/local/gcloud/google-cloud-sdk/bin
 
-# Copy in all of the source from current directory
-COPY ./ /worldping/
+RUN mkdir /worldping
 
 WORKDIR /worldping
-
-
