--- a/scripts/package/config/systemd/worldping-blackbox-sidecar.service
+++ b/scripts/package/config/systemd/worldping-blackbox-sidecar.service
@@ -6,12 +6,8 @@ Type=simple
 User=root
 Group=root
 EnvironmentFile=/etc/worldping/worldping.conf
-ExecStart=/usr/bin/worldping-blackbox-sidecar --api-token ${API_TOKEN} --api-server-address ${API_SERVER} --blackbox-exporter-config /etc/worldping/blackbox.yml
+ExecStart=/usr/bin/worldping-blackbox-sidecar --api-token ${API_TOKEN} --api-server-address ${API_SERVER}
 Restart=always
-
-[Unit]
-Requires=worldping-blackbox-exporter.service
-After=worldping-blackbox-exporter.service
 
 [Install]
 WantedBy=network-online.target
