Rename worldping to synthetic monitoring in packaging scripts
Signed-off-by: Marcelo E. Magallon <marcelo.magallon@grafana.com>

--- a/scripts/package/config/systemd/synthetic-monitoring-agent.conf
+++ b/scripts/package/config/systemd/synthetic-monitoring-agent.conf
@@ -2,4 +2,4 @@
 API_TOKEN='YOUR TOKEN HERE'
 
 # Backend API server to connect to
-API_SERVER='worldping-grpc.grafana.net:443' 
+API_SERVER='synthetic-monitoring-grpc.grafana.net:443' 
