--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,11 +29,11 @@ jobs:
       - deploy:
           command: |
             if [ "${CIRCLE_BRANCH}" == "master" ]; then
-              docker login -u $DOCKER_USER -p "$DOCKER_PASS" https://us.gcr.io
-              docker push us.gcr.io/kubernetes-dev/synthetic-monitoring-agent:latest
+              docker login -u $DOCKER_USER -p "$DOCKER_PASS"
+              make docker-push
               export GCS_KEY_DIR=$(pwd)/keys
               mkdir -p $GCS_KEY_DIR
-              echo "$DOCKER_PASS" > $GCS_KEY_DIR/gcs-key.json
+              echo "$GCS_KEY" > $GCS_KEY_DIR/gcs-key.json
               make publish-packages
             fi
 
