--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,6 +19,11 @@ jobs:
       - image: circleci/golang:1.13.10
     steps:
       - checkout
+      - run:
+          name: git fetch tags
+          command: |
+            git fetch origin --tags
+            git describe --dirty --tags --always
       - run: make build
 
   deploy:
@@ -27,6 +32,11 @@ jobs:
     steps:
       - checkout
       - setup_remote_docker
+      - run:
+          name: git fetch tags
+          command: |
+            git fetch origin --tags
+            git describe --dirty --tags --always
       - run:
           name: build docker image
           command: make docker
