build: get version using scripts/version
Use a single definition of what the version of the package is.

Signed-off-by: Marcelo E. Magallon <marcelo.magallon@grafana.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,7 @@ jobs:
           name: git fetch tags
           command: |
             git fetch origin --tags
-            git describe --dirty --tags --always
+            ./scripts/version
       - run: make build
 
   deploy:
@@ -36,7 +36,7 @@ jobs:
           name: git fetch tags
           command: |
             git fetch origin --tags
-            git describe --dirty --tags --always
+            ./scripts/version
       - run:
           name: build docker image
           command: make docker
