--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 # Created by https://www.gitignore.io/api/vim,code,linux,macos
 # Edit at https://www.gitignore.io/?templates=vim,code,linux,macos
 
+dist
+
 ### Code ###
 .vscode/*
 !.vscode/settings.json
