Ignore the private key created during the release process (#357)
It failed here: https://drone.grafana.net/grafana/synthetic-monitoring-agent/869

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,9 @@
 # Created by https://www.gitignore.io/api/vim,code,linux,macos
 # Edit at https://www.gitignore.io/?templates=vim,code,linux,macos
 
+### Release ###
 dist
+./release-private-key.key
 
 ### Code ###
 .vscode/*
