--- a/scripts/package/config/systemd/synthetic-monitoring-agent.conf
+++ b/scripts/package/config/systemd/synthetic-monitoring-agent.conf
@@ -1,5 +1,5 @@
 # Enter API token retrieved from grafana.com here
-API_TOKEN='YOUR TOKEN HERE'
+SM_AGENT_API_TOKEN='YOUR TOKEN HERE'
 
 # Backend API server to connect to
 API_SERVER='synthetic-monitoring-grpc.grafana.net:443' 
