dependabot: group prometheus updates

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,3 +9,7 @@ updates:
       - "dependencies"
     schedule:
       interval: "daily"
+    groups:
+      prometheus-go:
+        patterns:
+          - "github.com/prometheus/*"
