--- a/examples/kubernetes/secret.yaml
+++ b/examples/kubernetes/secret.yaml
@@ -1,8 +1,13 @@
 apiVersion: v1
-stringData:
-  api-token: YOUR_TOKEN_HERE
 kind: Secret
 metadata:
   name: sm-agent-1
   namespace: synthetic-monitoring
 type: Opaque
+stringData:
+  # This is your probe authentication token, obtained from the Synthetic monitoring plugin inside Grafana:
+  # https://grafana.com/docs/grafana-cloud/testing/synthetic-monitoring/set-up/set-up-private-probes/#add-a-new-probe-in-your-grafana-instance
+  api-token: YOUR_TOKEN
+  # Synthetic monitoring API server. You can obtain the API server from the backend address by checking this table:
+  # https://grafana.com/docs/grafana-cloud/testing/synthetic-monitoring/set-up/set-up-private-probes/#probe-api-server-url
+  api-server: PROBE_API_SERVER_URL # (e.g. synthetic-monitoring-grpc-eu-west-3.grafana.net:443)
