--- a/.github/workflows/renovate.yaml
+++ b/.github/workflows/renovate.yaml
@@ -23,5 +23,5 @@ jobs:
         uses: renovatebot/github-action@21d88b0bf0183abcee15f990011cca090dfc47dd # v40.1.12
         with:
           renovate-version: 37.420.1@sha256:528f003c9aa77f6e916e3f9f5cc2fb9ae16fcf285af66f412a34325124f4a00e
-          configurationFile: .github/renovate.json
+          configurationFile: .github/renovate-selfhosted.json
           token: '${{ steps.generate-token.outputs.token }}'
