--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -5,20 +5,19 @@
     ":semanticCommitsDisabled"
   ],
 
+
   "branchPrefix": "grafanarenovatebot/",
-  "username": "GrafanaRenovateBot",
-  "gitAuthor": "GrafanaRenovateBot <renovategrafana@grafana.com>",
+  // Used when renovate runs as a github app.
+  // https://docs.renovatebot.com/configuration-options/#platformcommit
+  // Setting platformCommit to `true`, as required by Grafana policy, seems to make renovate think all PRs are modified,
+  // as the dynamic author configured by github does not match the author set in `gitAuthor`. It is recommended to
+  // leave it unset: https://github.com/renovatebot/renovate/discussions/29106.
   "platformCommit": true,
   "dependencyDashboard": false,
-  "platform": "github",
   "forkProcessing": "disabled",
 
-  "repositories": [
-    "grafana/synthetic-monitoring-agent"
-  ],
-
+  // TODO: We should be able to use the defaults if we turn dependabot off.
   "enabledManagers": ["custom.regex", "gomod"],
-
   "gomod": {
     "enabled": true
   },
@@ -29,6 +28,7 @@
 
   "customManagers": [
     {
+      // Update k6 version in Dockerfiles.
       "customType": "regex",
       "datasourceTemplate": "github-releases",
       "depNameTemplate": "grafana/k6",
@@ -38,8 +38,10 @@
       ]
     },
     {
+      // Update grafana-build-tools tags across the repository.
       "customType": "regex",
-      "datasourceTemplate": "github-tags",
+      "depNameTemplate": "ghcr.io/grafana/grafana-build-tools",
+      "datasourceTemplate": "docker",
       "versioningTemplate": "semver",
       "fileMatch": [
         "^\\.github/workflows/.*\\.ya?ml$",
@@ -48,7 +50,7 @@
         ".*\\.mk$"
       ],
       "matchStrings": [
-        "\\bghcr\\.io/(?<depName>grafana/grafana-build-tools):(?<currentValue>\\S+)\\b"
+        "ghcr.io/grafana/grafana-build-tools:(?<currentValue>\\S+)"
       ]
     }
   ]
