fixup! renovate: add workflow to validate config

--- a/.github/workflows/renovate-validate.yaml
+++ b/.github/workflows/renovate-validate.yaml
@@ -1,6 +1,8 @@
 name: Validate renovate config
 on:
-  pull_request: {}
+  pull_request:
+    paths:
+      - '**renovate*.*'
 jobs:
   validate:
     runs-on: ubuntu-latest
