renovate: fix grafana-build-tools dependency regex

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -59,7 +59,7 @@
         ".*\\.mk$"
       ],
       "matchStrings": [
-        "ghcr.io/grafana/grafana-build-tools:(?<currentValue>\\S+)"
+        "ghcr.io/grafana/grafana-build-tools:(?<currentValue>[\\w-+.]+)"
       ]
     }
   ]
