Output unadorned version tag for releases
There's stuff out there with pretty weird ideas as to what constitutes a
"correct" version number. We have been trying to solve this problem of
"incorrect versioning" for over 30 years with no success. You have to
wonder why that is.

For the specific case of releases, in addition to using vX.Y.Z-0-sha,
also output a vX.Y.Z tag. That allows stuff to be happy about seeing
something that matches its expectations in terms of version numbers. We
still need to output something else in the n != 0 case, because we need
to be able to differentiate between intermediate builds. It's incorrect
in semver terms, because those are prereleases that sort _before_
vX.Y.Z, not after it. To do it correctly, we would have to transform
vX.Y.Z to vX.Y.(Z+1) and append the prerelease bit to that. Since that
would become confusing really fast (in the face of existing practice),
let's not do that. As long as nothing tries to "upgrade" vX.Y.Z-n-sha to
vX.Y.Z, we shoud be OK.

Signed-off-by: Marcelo E. Magallon <marcelo.magallon@grafana.com>

--- a/.drone.yml
+++ b/.drone.yml
@@ -26,7 +26,7 @@ steps:
   - git status --porcelain --untracked-files=no
   - git diff --no-ext-diff --quiet
   - ./scripts/version
-  - '{ echo -n latest, ; ./scripts/version ; } > .tags'
+  - ./scripts/generate-tags > .tags
   - make build
   depends_on:
   - deps
@@ -149,7 +149,7 @@ steps:
     ref:
     - refs/tags/v*.*.*
 - commands:
-  - echo "latest-browser,$(./scripts/version)-browser" > .tags
+  - ./scripts/generate-tags browser > .tags
   depends_on:
   - docker publish (release)
   image: ghcr.io/grafana/grafana-build-tools:v0.23.0
@@ -350,6 +350,6 @@ kind: secret
 name: gpg_private_key
 ---
 kind: signature
-hmac: d4db61b261c83fd65b96a3ea5bec1f3a1d8a5a4e7e80619c8573e6fd5dc6bbbd
+hmac: f6c6e83ee34a0f724b7e3e0ca4fad4e202fee749da8997dc30aeaddae3ec9a9e
 
 ...
