Add dev publish.

--- a/.drone.yml
+++ b/.drone.yml
@@ -160,6 +160,22 @@ steps:
   environment:
     DOCKER_BUILDKIT: "1"
   image: plugins/docker
+  name: docker publish (with browser) to gcr.io (linux/amd64)
+  settings:
+    config:
+      from_secret: docker_config_json
+    dry_run: "false"
+    repo: us.gcr.io/kubernetes-dev/synthetic-monitoring-agent
+  when:
+    ref:
+    - refs/heads/main
+    - refs/tags/v*.*.*
+- commands: []
+  depends_on:
+  - docker publish (with browser) tags
+  environment:
+    DOCKER_BUILDKIT: "1"
+  image: plugins/docker
   name: docker publish (with browser) to docker (linux/amd64)
   settings:
     dry_run: "false"
@@ -174,6 +190,17 @@ steps:
 - commands:
   - "true"
   depends_on:
+  - docker publish (with browser) to gcr.io (linux/amd64)
+  image: alpine
+  name: docker publish (with browser) (dev)
+  when:
+    ref:
+    - refs/heads/main
+    - refs/tags/v*.*.*
+- commands:
+  - "true"
+  depends_on:
+  - docker publish (with browser) to gcr.io (linux/amd64)
   - docker publish (with browser) to docker (linux/amd64)
   image: alpine
   name: docker publish (with browser) (release)
@@ -350,6 +377,6 @@ kind: secret
 name: gpg_private_key
 ---
 kind: signature
-hmac: b5ee6b1d887d33ce574bb7a29ac1f0b61a60a8b2d17e201f72fd23031da6a655
+hmac: f7266279e2cc15d10f9d7ec1047259521eec2736daa080f1fa6caf01cc0815be
 
 ...
